--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,16 +15,24 @@
         android:theme="@style/Theme.AndroidERestaurant"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
         <activity
-            android:name=".PlatActivity"
+            android:name=".DetailActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".SelectionActivite"
+            android:name=".PlatActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AndroidERestaurant.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value=""
+                android:theme="@style/Theme.AndroidERestaurant.NoActionBar"/>
+        </activity>
+        <activity
+            android:name=".SelectionActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -44,6 +51,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
